# skull-back-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Init.cmake  Tests.cmake  build.sh  conanfile.txt  todo
ext/gtest/: CMakeLists.txt.in  gtest.cmake
src/: auth.hpp  constants.hpp  constants_template.hpp  context.cpp  context.hpp  file_handle.cpp  file_handle.hpp  format.hpp  main.cpp  model.hpp  quick_value.hpp  response.cpp  response.hpp  server.cpp  server.hpp  skull_value.hpp  storage.cpp  storage.hpp  user.hpp
src/res/: quick_values.json
test/: test_main.cpp  test_models.cpp  test_server.cpp
